feat: update s3 uploader :zap:
